exports[`FilteredInput should allow formatting with a customFormatter 1`] = `
<input
  customFormatter={[Function]}
  onChange={[Function]}
  type="text"
  value="5000" />
`;

exports[`FilteredInput with all props 1`] = `
<input
  id="test"
  maxLength="3"
  name="test"
  onChange={[Function]}
  type="text"
  value="" />
`;

exports[`FilteredInput with initial value 1`] = `
<input
  onChange={[Function]}
  type="text"
  value="Tien" />
`;

exports[`FilteredInput with only required props 1`] = `
<input
  onChange={[Function]}
  type="text"
  value="" />
`;
